--- a/MEAN/projects/Mean_Black_Belt/blackbelt/client/partials/main.html
+++ b/MEAN/projects/Mean_Black_Belt/blackbelt/client/partials/main.html
@@ -11,7 +11,7 @@
       <th>Action</th>
     </tr>
     <tr ng-repeat="i in users">
-      <td>{{ i }}</td>
+      <td>{{ i.name }}</td>
       <td><a href="#!/poll/{{i._id}}">{{ i.question }}</a></td>
       <td>{{ i.createdAt }}</td>
       <td><button type="button" ng-click="remove(i)">Delete</button></td>
