--- a/MEAN/projects/Mean_Black_Belt/blackbelt/client/partials/new.html
+++ b/MEAN/projects/Mean_Black_Belt/blackbelt/client/partials/new.html
@@ -3,6 +3,7 @@
 <div ng-controller="usersController" class="container">
   <form ng-submit="add()">
     <div class="form-group">
+      <p ng-bind="errorMsg.errors.question.message"></p>
       <label for="question">Question:</label>
       <input type="text" class="form-control" ng-model="item.question" placeholder="Type in Question">
     </div>
