--- a/MEAN/projects/Mean_Black_Belt/blackbelt/client/partials/main.html
+++ b/MEAN/projects/Mean_Black_Belt/blackbelt/client/partials/main.html
@@ -2,7 +2,7 @@
 <div ng-controller="usersController" class="container">
   <a href="#!/new">Create a New Poll</a>
   <a href="#!/">Logout</a>
-  <input type="text" name="search" value="" placeholder="Search">
+  <input type="text" name="search" ng-model="userName" placeholder="Search">
   <table class="table table-striped table-bordered">
     <tr>
       <th>Name</th>
@@ -10,11 +10,11 @@
       <th>Date Posted</th>
       <th>Action</th>
     </tr>
-    <tr ng-repeat="i in users">
+    <tr ng-repeat="i in users | filter: userName">
       <td>{{ i.name }}</td>
       <td><a href="#!/poll/{{i._id}}">{{ i.question }}</a></td>
       <td>{{ i.createdAt | date: dd-MM-yyyy }}</td>
-      <td><button ng-show="loggedInUser._id == i._user._id" type="button" ng-click="remove(i)">Delete</button></td>
+      <td><button ng-show="loggedInUser.name == i.name" type="button" ng-click="remove(i)">Delete</button></td>
     </tr>
   </table>
 </div>
