--- a/RUBY/first_vagrant_box/dojo_dashboard/app/views/students/show.html.erb
+++ b/RUBY/first_vagrant_box/dojo_dashboard/app/views/students/show.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Dojo Dashboard</title>
+    <title>Show</title>
 <!-- BOOSTRAP -->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -10,31 +10,36 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <style type="text/css" media="screen">
+      span {
+        font-weight: normal;
+      }
+    </style>
   </head>
   <body>
-    <h1>Dojos#index</h1>
-    <p>Find me in app/views/dojos/index.html.erb</p>
-
     <div class="container">
+      <h1>Students#show</h1>
+      <p>Find me in app/views/students/show.html.erb</p>
+      <h3><%= @dojo.branch %>'s <%= @user.first_name %> <%= @user.last_name %></h3>
+      <h5>Email: <span><%= @user.email %></span></h5>
+      <h4>Cohort</h4>
+      <br>
       <table class="table table-striped table-bordered">
         <tr>
-          <th>Coding Dojo Branch</th>
-          <th>Street</th>
-          <th>City</th>
-          <th>State</th>
-          <th>Actions</th>
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>Email</th>
         </tr>
-        <% @dojos.each do |i| %>
+        <% @students.each do |i| %>
         <tr>
-          <td><a href="/dojos/<%= i.id %>/students"><%= i.branch %></a></td>
-          <td><%= i.street %></td>
-          <td><%= i.city %></td>
-          <td><%= i.state %></td>
-          <td><a href="/dojos/<%= i.id %>">Show</a> | <a href="/dojos/<%= i.id %>/edit">Edit</a> | <%= link_to "Delete", "dojos/#{i.id}", data: { method: :delete, confirm: "Are you sure?" } %></td>
+          <td><%= i.first_name %></td>
+          <td><%= i.last_name %></td>
+          <td><%= i.email %></td>
         </tr>
         <% end %>
       </table>
-      <a href="/dojos/new">New Dojo</a>
+      <a href="/dojos">Home</a>
+      <a href="/dojos/<%= @dojo.id %>/students/<%= @user.id %>/edit">Edit</a>
     </div>
   </body>
 </html>
