--- a/RUBY/first_vagrant_box/TestingFactoryApp/app/views/users/new.html.erb
+++ b/RUBY/first_vagrant_box/TestingFactoryApp/app/views/users/new.html.erb
@@ -1,2 +1,20 @@
 <h1>Users#new</h1>
 <p>Find me in app/views/users/new.html.erb</p>
+
+<h1>Create new User</h1>
+<% if flash[:errors] %>
+  <% flash[:errors].each do |e| %>
+    <p id="error"><%= e %></p>
+  <% end %>
+<% end %>
+
+<form action = "/users" method = "post">
+  <input type = 'hidden' name = "authenticity_token" value = "<%=form_authenticity_token%>">
+  <label>First Name</label>
+  <input type = "text" name = "user[first_name]" id = "user_first_name">
+  <label>Last Name</label>
+  <input type="text" name="user[last_name]" id = "user_last_name">
+  <label>Email Address</label>
+  <input type="text" name="user[email]" id = "user_email">
+  <input type = "submit" value = "Create User">
+</form>
