--- a/RUBY/first_vagrant_box/the_wall/app/views/messages/index.html.erb
+++ b/RUBY/first_vagrant_box/the_wall/app/views/messages/index.html.erb
@@ -4,7 +4,7 @@
 <h2>Coding Dojo Wall</h2>
 <h2>Welcome <%= @user.username%></h2>
 
-<%= link_to "Log out", "/logout", data: { method: :delete, confirm: "Are you sure?" } %>
+<%= link_to "Log out", "/users/logout", data: { method: :delete, confirm: "Are you sure?" } %>
 
 <h1>Post a message</h1>
 
